<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Login"
        android:id="@+id/textViewTitle"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUserName"
        android:layout_below="@+id/textViewTitle"
        android:hint="Username"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:hint="Password"
        android:layout_below="@+id/editTextUserName"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="LoginClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remember me?"
        android:id="@+id/checkBoxRememberLogin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_toLeftOf="@+id/buttonLogin"
        android:layout_toStartOf="@+id/buttonLogin" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerTest"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:entries="@array/spinner_data"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show result"
        android:id="@+id/buttonTest"
        android:layout_below="@+id/spinnerTest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="clickShowResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewResult"
        android:layout_below="@+id/buttonTest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
