...
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textViewTask1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/buttonPrev"
                android:layout_marginTop="20dp"
...
